deployment/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: lego-bridge
  annotations:
    argocd.argoproj.io/sync-wave: "3"
  labels:
    app: lego-bridge
    service: lego-bridge
    component: lego-bridge
    id: lego-bridge
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
      name: http-tcp
  selector:
    id: lego-bridge
  type: ClusterIP
